fix Configurer by binding bean to singleton scope thus disabling just-in-time binding that occurs in the parent injector; fix Webster configuration processing - {start,end}Port == 0 treated specially; add logs

--- a/tools/sos-webster/pom.xml
+++ b/tools/sos-webster/pom.xml
@@ -31,6 +31,7 @@
             <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>sos-util</artifactId>
             <version>${project.version}</version>
+            <scope>provided</scope>
         </dependency>
        	<dependency>
 			<groupId>org.sorcersoft.sorcer</groupId>
