Extract webster profile; move webster config helper methods to WebsterStarter; WebsterStarter sets up websterUrl in SorcerEnv; minor fixes and improvements.

--- a/configs/webster/configs/webster-prv.config
+++ b/configs/webster/configs/webster-prv.config
@@ -1,50 +1,46 @@
-import java.net.URL;
-import sorcer.provider.boot.Booter;
-
-import sorcer.core.SorcerEnv;
-
-
+/*
+ * Copyright 2013, 2014 Sorcersoft.com S.A.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+import sorcer.tools.webster.WebsterStarter;
 
 sorcer.tools.codeserver {
 
     home = "${sorcer.home}";
 
     // for compatibility with old sorcer distro
-    sorcerLibPath 	 = home + "${/}lib${/}sorcer";
-    jiniLibPath 	 = home + "${/}lib${/}jini";
-    rioLibPath 	     = home + "${/}lib${/}rio";
-    rioResLibPath 	 = home + "${/}lib${/}rio-resolver";
-    rioCybLibPath 	 = home + "${/}lib${/}rio-cybernode";
-    rioMonLibPath 	 = home + "${/}lib${/}rio-monitor";
-    riverLibPath 	 = home + "${/}lib${/}river";
-    commonsLibPath 	 = home + "${/}lib${/}commons";
-    jiniLookupLibPath= home + "${/}lib${/}jini-lookup";
-    //
-
-    //provider.webster.port
-    websterPort = Booter.getWebsterPort();
-    //websterPort = 0;
-    //provider.webster
-    websterAddress = Booter.getWebsterInterface();
-    startPort = Booter.getWebsterStartPort();
-    endPort = Booter.getWebsterEndPort();
-    isDaemon = false;
-    
-    roots = Booter.getWebsterRoots(new String[] {
-		sorcerLibPath,
-		jiniLibPath,
-		rioLibPath,
-		rioResLibPath,
-		rioCybLibPath,
-		rioMonLibPath,
-		jiniLookupLibPath,
-		riverLibPath,
-		commonsLibPath
+    roots = WebsterStarter.getWebsterRoots(new String[] {
+		home + "${/}lib${/}sorcer",
+		home + "${/}lib${/}jini",
+		home + "${/}lib${/}rio",
+		home + "${/}lib${/}rio-resolver",
+		home + "${/}lib${/}rio-cybernode",
+		home + "${/}lib${/}rio-monitor",
+		home + "${/}lib${/}jini-lookup",
+		home + "${/}lib${/}river",
+		home + "${/}lib${/}commons"
     });
+
+    websterPort = WebsterStarter.getWebsterPort();
+    websterAddress = WebsterStarter.getWebsterInterface();
+    startPort = WebsterStarter.getWebsterStartPort();
+    endPort = WebsterStarter.getWebsterEndPort();
+    isDaemon = false;
 }
 
 sorcer.core.service.ServiceBuilder{
-	type = sorcer.tools.webster.WebsterStarter.class;
+	type = WebsterStarter.class;
 	export = false;
 	register = false;
 }
