add monitoring local webster if the port is taken; add monitoring remote webster

--- a/tools/sos-webster/pom.xml
+++ b/tools/sos-webster/pom.xml
@@ -16,6 +16,17 @@
 
 	<dependencies>
         <dependency>
+            <groupId>org.rioproject</groupId>
+            <artifactId>webster</artifactId>
+            <version>${v.rio}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.rioproject</groupId>
+                    <artifactId>rio-start</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
             <groupId>net.jini</groupId>
             <artifactId>jsk-lib</artifactId>
             <version>${v.jini}</version>
