Temporally mMove WebsterStarter to separate package allowing it to import Webster from Rio

--- a/configs/webster/configs/webster-prv.config
+++ b/configs/webster/configs/webster-prv.config
@@ -13,7 +13,7 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-import sorcer.tools.webster.WebsterStarter;
+import sorcer.tools.webster.start.WebsterStarter;
 import sorcer.core.SorcerEnv;
 
 sorcer.tools.codeserver {
@@ -38,10 +38,4 @@ sorcer.tools.codeserver {
     startPort = WebsterStarter.getWebsterStartPort();
     endPort = WebsterStarter.getWebsterEndPort();
     isDaemon = false;
-}
-
-sorcer.core.service.ServiceBuilder{
-	type = WebsterStarter.class;
-	export = false;
-	register = false;
 }
