--- a/tools/sos-shell/pom.xml
+++ b/tools/sos-shell/pom.xml
@@ -32,6 +32,11 @@
         </dependency>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>sorcer-launcher</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>sos-webster</artifactId>
             <version>${project.version}</version>
         </dependency>
@@ -43,6 +48,11 @@
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+            <version>${v.ccli}</version>
         </dependency>
     </dependencies>
     <build>
