--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -80,6 +80,11 @@
             <artifactId>sorcer-launcher</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>sorcer-boot-rio</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 <!--
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
@@ -539,7 +544,12 @@
         <dependency>
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-model</artifactId>
-            <version>3.0.5</version>
+            <version>${v.maven}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.maven</groupId>
+            <artifactId>maven-artifact</artifactId>
+            <version>${v.maven}</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -588,6 +598,11 @@
             <groupId>aopalliance</groupId>
             <artifactId>aopalliance</artifactId>
             <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>${v.guava}</version>
         </dependency>
     </dependencies>
 
