Introduce IControlContext; Introduce MonitorUtil for setting and accessing MonitoringSession in the ControlContext

--- a/sos-providers/exertmonitor/pom.xml
+++ b/sos-providers/exertmonitor/pom.xml
@@ -13,5 +13,6 @@
 	<modules>
 		<module>exertmonitor-cfg</module>
 		<module>exertmonitor-prv</module>
+		<module>exertmonitor-api</module>
 	</modules>
 </project>
