--- a/sos-providers/spacetaker/spacetaker-prv/pom.xml
+++ b/sos-providers/spacetaker/spacetaker-prv/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <groupId>org.sorcersoft.sorcer</groupId>
         <artifactId>spacetaker</artifactId>
-        <version>1.0-M5-SNAPSHOT</version>
+        <version>1.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>spacetaker-prv</artifactId>
