--- a/sos-providers/spacetaker/spacetaker-req/pom.xml
+++ b/sos-providers/spacetaker/spacetaker-req/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <artifactId>spacetaker</artifactId>
         <groupId>org.sorcersoft.sorcer</groupId>
-        <version>1.0-M5-SNAPSHOT</version>
+        <version>1.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>spacetaker-req</artifactId>
