--- a/sos-providers/spacetaker/spacetaker-prv/pom.xml
+++ b/sos-providers/spacetaker/spacetaker-prv/pom.xml
@@ -37,7 +37,7 @@
         </dependency>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
-            <artifactId>sorcer-container-spi</artifactId>
+            <artifactId>sorcer-spi</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
