--- a/configs/jini/configs/jiniservices.config
+++ b/configs/jini/configs/jiniservices.config
@@ -1,6 +1,3 @@
-import net.jini.jeri.tcp.TcpServerEndpoint;
-import net.jini.jeri.BasicILFactory;
-import net.jini.jeri.BasicJeriExporter;
 import com.sun.jini.config.ConfigUtil;
 
 root {
@@ -9,7 +6,7 @@ root {
 }
 
 com.sun.jini.reggie {
-    serverExporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(root.host, 0), new BasicILFactory());
+    serverExporter = sorcer.container.jeri.ExporterFactories.getBasicTcp();
     initialMemberGroups = root.groups;
     minMaxEventLease = 30000L;
     minMaxServiceLease = 15000L;
@@ -17,11 +14,11 @@ com.sun.jini.reggie {
 }
 
 com.sun.jini.outrigger {
-    serverExporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(root.host, 0), new BasicILFactory());
+    serverExporter = sorcer.container.jeri.ExporterFactories.getBasicTcp();
     initialLookupGroups = root.groups;
 }
 
 com.sun.jini.mahalo {
-    serverExporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(root.host, 0), new BasicILFactory());
+    serverExporter = sorcer.container.jeri.ExporterFactories.getBasicTcp();
     initialLookupGroups = root.groups;
 }
