--- a/examples/account/account-cfg-2/src/main/resources/account.config
+++ b/examples/account/account-cfg-2/src/main/resources/account.config
@@ -33,7 +33,7 @@ sorcer.core.provider.ServiceProvider {
 			new Comment("Teaching example"),
 			new Location("3", "310", "Sorcersoft.com Lab")
 	};
-    //exporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(0), new BasicILFactory());
+    //exporterFactory = sorcer.container.jeri.ExporterFactory.EXPORTER;
 	monitorEnabled = true;
 	spaceEnabled = true;
 }
