--- a/examples/ex1/ex1-cfg-all/src/main/resources/whoIsIt2-prv.config
+++ b/examples/ex1/ex1-cfg-all/src/main/resources/whoIsIt2-prv.config
@@ -33,7 +33,7 @@ sorcer.core.provider.ServiceProvider {
 		remoteContextLogging = true;
 		remoteProviderLogging = true;
 			
-        exporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(Booter.getHostAddress(), 0), new BasicILFactory());
+        // exporterFactory = sorcer.container.jeri.ExporterFactory.EXPORTER;
         
         iconName="worker.jpg";
 }
