--- a/sos-providers/cataloger/cataloger-cfg/src/main/resources/cataloger.config
+++ b/sos-providers/cataloger/cataloger-cfg/src/main/resources/cataloger.config
@@ -36,11 +36,8 @@ sorcer.core.provider.ServiceProvider  {
 			new Comment("Welcome to exertion-oriented programming!"),
 			new Location("", "", "Sorcersoft.com") };
 
-        // if not declared the default exporter is BasicJeriExporter
-        // exporter = new JrmpExporter(0);
-         exporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(SorcerEnv.getHostAddress(), 0), new BasicILFactory());
-        
-         iconName="sorcer-ico.png";
+        // if not declared the default exporter is sorcer.container.jeri.ExporterFactory.EXPORTER
+        // exporterFactory = sorcer.container.jeri.ExporterFactory.EXPORTER;
+
+        iconName="sorcer-ico.png";
 }
-
-
