--- a/sos-providers/concatenator/concatenator-cfg/src/main/resources/concatenator.config
+++ b/sos-providers/concatenator/concatenator-cfg/src/main/resources/concatenator.config
@@ -16,8 +16,8 @@ sorcer.core.provider.ServiceProvider {
 	description = "Concatenator";
 	location="MSTC/AFRL/WPAFB";
 
-    // if not declared the default exporter is BasicJeriExporter
-    exporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(SorcerEnv.getHostAddress(), 0), new BasicILFactory());
+    // if not declared the default exporter is sorcer.container.jeri.ExporterFactory.EXPORTER
+    // exporterFactory = sorcer.container.jeri.ExporterFactory.EXPORTER;
 
     //Exertion Space (JavaSpaces configuration)
     spaceEnabled = false;
