--- a/sos-providers/dbp/dbp-cfg/src/main/resources/dbp.config
+++ b/sos-providers/dbp/dbp-cfg/src/main/resources/dbp.config
@@ -27,10 +27,9 @@ sorcer.core.provider.ServiceProvider {
     
     dbHome="${sorcer.home}${/}databases${/}dbfiles_dbp";
     
-    // if not declared the default exporter is BasicJeriExporter
-    //exporter = new JrmpExporter(0);
-    exporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(SorcerEnv.getHostAddress(), 0), new BasicILFactory());
-    
+    // if not declared the default exporter is sorcer.container.jeri.ExporterFactory.EXPORTER
+    // exporterFactory = sorcer.container.jeri.ExporterFactory.EXPORTER;
+
     spaceEnabled = false;
     		
     iconName="sorcer-ico.png";
