--- a/sos-providers/exertmonitor/exertmonitor-cfg/src/main/resources/exertmonitor.config
+++ b/sos-providers/exertmonitor/exertmonitor-cfg/src/main/resources/exertmonitor.config
@@ -26,7 +26,7 @@ sorcer.core.provider.ServiceProvider {
 	
 	// if not declared the default exporter is BasicJeriExporter
 	//exporter = new JrmpExporter(0);
-	exporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(Booter.getHostAddress(), 0), new BasicILFactory());
+	// exporterFactory = sorcer.container.jeri.ExporterFactory.EXPORTER;
 	
 	//Exertion Space (JavaSpaces configuration) not required for Exertion Monitoring
 	spaceEnabled = false;
