--- a/sos-providers/logger/logger-cfg/src/main/resources/logger.config
+++ b/sos-providers/logger/logger-cfg/src/main/resources/logger.config
@@ -27,9 +27,9 @@ sorcer.core.provider.ServiceProvider {
 		new Location("", "", "Sorcersoft.com")
 	};
 
-	// if not declared the default exporter is BasicJeriExporter
+	// if not declared the default exporter is sorcer.container.jeri.ExporterFactory.EXPORTER
     	//exporter = new JrmpExporter(0);
-    	exporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(SorcerEnv.getHostAddress(), 0), new BasicILFactory());
+    // exporterFactory = sorcer.container.jeri.ExporterFactory.EXPORTER;
     
     	//Exertion Space (JavaSpaces configuration) not required for Loggers
     	spaceEnabled = false;
