--- a/sos-providers/spacer/spacer-cfg/src/main/resources/spacer.config
+++ b/sos-providers/spacer/spacer-cfg/src/main/resources/spacer.config
@@ -21,7 +21,7 @@ sorcer.core.provider.ServiceProvider {
 		
     // if not declared the default exporter is BasicJeriExporter
     //exporter = new JrmpExporter(0);
-    exporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(SorcerEnv.getHostAddress(), 0), new BasicILFactory());
+    // exporterFactory = sorcer.container.jeri.ExporterFactories.EXPORTER;
     
     //Exertion Space (JavaSpaces configuration)
     spaceEnabled = true;
