--- a/configs/blitz/configs/mahalo.config
+++ b/configs/blitz/configs/mahalo.config
@@ -1,15 +1,7 @@
-import net.jini.jeri.tcp.TcpServerEndpoint;
-import net.jini.jeri.BasicILFactory;
-import net.jini.jeri.BasicJeriExporter;
-
-import sorcer.provider.boot.Booter;
 import sorcer.core.SorcerEnv;
 
 com.sun.jini.mahalo{
 
 	initialLookupGroups = SorcerEnv.getGroups();
-	//host = Booter.getHostAddress();
-	//host = Env.getHostName();
-	
-	//serverExporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(host, 0), new BasicILFactory());
+	serverExporter = sorcer.container.jeri.ExporterFactories.getBasicTcp();
 }
