--- a/configs/jini/configs/outrigger-boot.config
+++ b/configs/jini/configs/outrigger-boot.config
@@ -1,6 +1,3 @@
-import net.jini.jeri.tcp.TcpServerEndpoint;
-import net.jini.jeri.BasicILFactory;
-import net.jini.jeri.BasicJeriExporter;
 import com.sun.jini.config.ConfigUtil;
 import net.jini.core.entry.Entry;
 import net.jini.lookup.entry.*;
@@ -21,5 +18,5 @@ com.sun.jini.outrigger {
     //initialLookupLocators
     //initialUnicastDiscoveryPort
    
-    serverExporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(SorcerEnv.getHostAddress(), 0), new BasicILFactory());
+    serverExporter = sorcer.container.jeri.ExporterFactories.getBasicTcp();
 }
