--- a/configs/jini/configs/outrigger.config
+++ b/configs/jini/configs/outrigger.config
@@ -1,6 +1,3 @@
-import net.jini.jeri.tcp.TcpServerEndpoint;
-import net.jini.jeri.BasicILFactory;
-import net.jini.jeri.BasicJeriExporter;
 import net.jini.core.entry.Entry;
 import net.jini.lookup.entry.*;
 import sorcer.provider.boot.Booter;
@@ -16,5 +13,5 @@ com.sun.jini.outrigger {
     	new Comment("group:" + Arrays.toString(initialLookupGroups)),
 		new Comment(System.getProperty("user.name"))
 	};
-    serverExporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(Booter.getHostAddress(), 0), new BasicILFactory());
+    serverExporter = sorcer.container.jeri.ExporterFactories.getBasicTcp();
 }
