--- a/examples/account/account-cfg-1/src/main/resources/account.config
+++ b/examples/account/account-cfg-1/src/main/resources/account.config
@@ -37,5 +37,5 @@ sorcer.core.provider.ServiceProvider {
 
 sorcer.core.service.ServiceBuilder {
 	type = sorcer.account.provider.AccountProvider.class;
-    //exporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(0), new BasicILFactory());
+    //exporterFactory = sorcer.container.jeri.ExporterFactories.getBasicTcp();
 }
