--- a/examples/ex2/ex2-cfg1/src/main/resources/worker1-prv.config
+++ b/examples/ex2/ex2-cfg1/src/main/resources/worker1-prv.config
@@ -18,7 +18,7 @@ sorcer.core.provider.ServiceProvider {
 			new Comment("Implements Worker interface with three operations"), 
 			new Location("", "", "Sorcersoft.com") };
 			
-        exporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(Booter.getHostAddress(), 0), new BasicILFactory());
+        // exporterFactory = sorcer.container.jeri.ExporterFactory.EXPORTER;
         
         spaceEnabled = true;
         
