--- a/sos-providers/jobber/jobber-cfg/src/main/resources/config/jobber.config
+++ b/sos-providers/jobber/jobber-cfg/src/main/resources/config/jobber.config
@@ -7,8 +7,6 @@ import sorcer.core.*;
 import net.jini.core.entry.Entry;
 import net.jini.lookup.entry.*;
 
-import sorcer.provider.boot.Booter;
-
 sorcer.core.provider.ServiceProvider {
     // application-specific service provider properties
     //properties = "../configs/jobber-prv.properties";
@@ -25,12 +23,12 @@ sorcer.core.provider.ServiceProvider {
 		new Comment("Welcome to exertion-oriented programming!"), 
 		new Location("", "", "Sorcersoft.com") };
 	
-    // if not declared the default exporter is BasicJeriExporter
+    // if not declared the default exporter is ExporterFactory.EXPORTER
     //exporter = new JrmpExporter(0);
-    exporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(Booter.getHostAddress(), 0), new BasicILFactory());
+    // exporterFactory = sorcer.container.jeri.ExporterFactory.EXPORTER;
     
  	// Exertion Space (JavaSpaces configuration)
-    spaceEnabled = false;
+    spaceEnabled = true;
     		
     iconName="sorcer-ico.png";
 }
