--- a/sos-providers/jobber/jobber-cfg/src/main/resources/jobber.config
+++ b/sos-providers/jobber/jobber-cfg/src/main/resources/jobber.config
@@ -23,9 +23,9 @@ sorcer.core.provider.ServiceProvider {
 		new Comment("Welcome to exertion-oriented programming!"), 
 		new Location("", "", "Sorcersoft.com") };
 	
-    // if not declared the default exporter is BasicJeriExporter
+    // if not declared the default exporter is ExporterFactory.EXPORTER
     //exporter = new JrmpExporter(0);
-    exporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(SorcerEnv.getHostAddress(), 0), new BasicILFactory());
+    // exporterFactory = sorcer.container.jeri.ExporterFactory.EXPORTER;
     
  	// Exertion Space (JavaSpaces configuration)
     spaceEnabled = true;
