--- a/sos-providers/other-configs/blitz-cfg/src/main/resources/blitz.config
+++ b/sos-providers/other-configs/blitz-cfg/src/main/resources/blitz.config
@@ -4,11 +4,6 @@ import java.util.logging.Level;
 
 import net.jini.security.BasicProxyPreparer;
 
-import net.jini.jeri.tcp.TcpServerEndpoint;
-import net.jini.jeri.ProxyTrustILFactory;
-import net.jini.jeri.BasicILFactory;
-import net.jini.jeri.BasicJeriExporter;
-
 import org.dancres.blitz.stats.Switch;
 import org.dancres.blitz.stats.OpSwitch;
 import org.dancres.blitz.stats.InstanceSwitch;
@@ -188,8 +183,7 @@ org.dancres.blitz {
 
     // The exporter to use - see the JINI documentation
     //
-    serverExporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(SorcerEnv.getHostAddress(), 0),
-                         new ProxyTrustILFactory(null, null), false, true);
+    serverExporter = sorcer.container.jeri.ExporterFactory.getTrustedTcp();
 
     // Blitz provides a suitable default for all these but this is how you'd
     // configure them explicitly
