--- a/sos-providers/other-configs/mercury-cfg/src/main/resources/mercury.config
+++ b/sos-providers/other-configs/mercury-cfg/src/main/resources/mercury.config
@@ -1,6 +1,3 @@
-import net.jini.jeri.tcp.TcpServerEndpoint;
-import net.jini.jeri.BasicILFactory;
-import net.jini.jeri.BasicJeriExporter;
 import net.jini.core.entry.Entry;
 import net.jini.lookup.entry.*;
 import sorcer.provider.boot.Booter;
@@ -17,5 +14,5 @@ com.sun.jini.mercury {
     	new Comment(System.getProperty("user.name")),
     	new Comment("group:" + Arrays.toString(initialLookupGroups))
     };
-    serverExporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(Booter.getHostAddress(), 0), new BasicILFactory());
+    serverExporter = sorcer.container.jeri.ExporterFactories.getBasicTcp();
 }
