single space taker, WIP, errors

--- a/sos/pom.xml
+++ b/sos/pom.xml
@@ -26,5 +26,6 @@
         <module>exertlet</module>
         <module>default-codebase</module>
         <module>platform/sorcer-boot-rio</module>
+        <module>sorcer-container-api</module>
     </modules>
 </project>
