Fixed blitz.config - should fix space tests

--- a/sos-providers/other-configs/blitz-cfg/src/main/resources/blitz.config
+++ b/sos-providers/other-configs/blitz-cfg/src/main/resources/blitz.config
@@ -183,7 +183,7 @@ org.dancres.blitz {
 
     // The exporter to use - see the JINI documentation
     //
-    serverExporter = sorcer.container.jeri.ExporterFactory.getTrustedTcp();
+    serverExporter = sorcer.container.jeri.ExporterFactories.getTrustedTcp();
 
     // Blitz provides a suitable default for all these but this is how you'd
     // configure them explicitly
