--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
         with an unprecedented level of reliability.
     </description>
 
-	<url>http://www.sorcersoft.com/</url>
+	<url>http://open.sorcersoft.com/</url>
 	<inceptionYear>2013</inceptionYear>
 
 	<properties>
