Added caching to exertmonitor and ignoring of unix-pkg on windows

--- a/tools/sorcer-pkg/pom.xml
+++ b/tools/sorcer-pkg/pom.xml
@@ -11,6 +11,11 @@
     <profiles>
     <profile>
         <id>release</id>
+        <activation>
+            <os>
+                <family>unix</family>
+            </os>
+        </activation>
         <dependencies>
             <dependency>
                 <groupId>org.sorcersoft.sorcer</groupId>
