[pom] configure logging for surefire

--- a/pom.xml
+++ b/pom.xml
@@ -292,6 +292,7 @@
                             <!--<RIO_HOME>${env.SORCER_HOME}/target/rio</RIO_HOME>-->
                             <sorcer.home>${env.SORCER_HOME}</sorcer.home>
                             <java.rmi.server.RMIClassLoaderSpi>sorcer.rio.rmi.SorcerResolvingLoader</java.rmi.server.RMIClassLoaderSpi>
+                            <logback.configurationFile>${env.SORCER_HOME}/configs/logback.groovy</logback.configurationFile>
                         </systemPropertyVariables>
 
                         <!-- reuse forks should work after all integration tests are migrated to SorcerRunner -->
