Increased lookup.wait in distro, removed setting RIO_HOME by maven

--- a/pom.xml
+++ b/pom.xml
@@ -284,7 +284,7 @@
                     <version>2.16</version>
                     <configuration>
                         <systemPropertyVariables>
-                            <RIO_HOME>${env.SORCER_HOME}/target/rio</RIO_HOME>
+                            <!--<RIO_HOME>${env.SORCER_HOME}/target/rio</RIO_HOME>-->
                             <sorcer.home>${env.SORCER_HOME}</sorcer.home>
                             <java.rmi.server.RMIClassLoaderSpi>sorcer.rio.rmi.SorcerResolvingLoader</java.rmi.server.RMIClassLoaderSpi>
                         </systemPropertyVariables>
