--- a/tools/provider-root/pom.xml
+++ b/tools/provider-root/pom.xml
@@ -136,6 +136,21 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.1</version>
                 </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <configuration>
+                        <groups>${surefire.includedGroups}</groups>
+                        <excludedGroups>${surefire.excludedGroups}</excludedGroups>
+                    </configuration>
+                    <dependencies>
+                        <dependency>
+                            <groupId>org.sorcersoft.sorcer</groupId>
+                            <artifactId>sorcer-junit</artifactId>
+                            <version>${project.version}</version>
+                        </dependency>
+                    </dependencies>
+                </plugin>
             </plugins>
         </pluginManagement>
         <plugins>
@@ -174,5 +189,16 @@
             </snapshots>
         </repository>
     </repositories>
+
+    <profiles>
+        <profile>
+            <id>run-its</id>
+            <properties>
+                <run-its>true</run-its>
+                <surefire.excludedGroups/>
+                <surefire.includedGroups>sorcer.junit.SorcerClient</surefire.includedGroups>
+            </properties>
+        </profile>
+    </profiles>
 
 </project>
