Added remote logging per exertion - PoC implementation in shell's ExertCmd

--- a/sos-providers/logger/logger-prv/pom.xml
+++ b/sos-providers/logger/logger-prv/pom.xml
@@ -23,7 +23,7 @@
         </dependency>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
-            <artifactId>sorcer-api</artifactId>
+            <artifactId>sos-platform</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
