--- a/sos-providers/logger/logger-api/pom.xml
+++ b/sos-providers/logger/logger-api/pom.xml
@@ -20,5 +20,23 @@
             <version>${v.logback}</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>net.jini</groupId>
+            <artifactId>jsk-lib</artifactId>
+            <version>${v.jini}</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>net.jini</groupId>
+            <artifactId>jsk-platform</artifactId>
+            <version>${v.jini}</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.rioproject</groupId>
+            <artifactId>rio-api</artifactId>
+            <version>${v.rio}</version>
+<!--            <scope>compile</scope>-->
+        </dependency>
     </dependencies>
 </project>
