Fixed Remote Logger

--- a/configs/sorcer.env
+++ b/configs/sorcer.env
@@ -29,6 +29,7 @@ provider.lookup.accessor=sorcer.util.ProviderAccessor
 #provider.lookup.accessor=sorcer.util.ProviderLocator
 #   multicast  only
 #provider.lookup.accessor=sorcer.util.ProviderLookup
+#provider.lookup.accessor=sorcer.util.ServiceAccessor
 
 # Exertion space manger (Spacer)
 provider.spacer.name = Spacer
