--- a/sos-providers/logger/logger-platform/pom.xml
+++ b/sos-providers/logger/logger-platform/pom.xml
@@ -20,6 +20,11 @@
         </dependency>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>sos-platform</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>sorcer-spi</artifactId>
             <version>${project.version}</version>
         </dependency>
