--- a/sos-providers/logger/logger-api/pom.xml
+++ b/sos-providers/logger/logger-api/pom.xml
@@ -27,10 +27,9 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>net.jini</groupId>
-            <artifactId>jsk-platform</artifactId>
-            <version>${v.jini}</version>
-            <scope>compile</scope>
+            <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>sorcer-api</artifactId>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.rioproject</groupId>
@@ -39,4 +38,16 @@
 <!--            <scope>compile</scope>-->
         </dependency>
     </dependencies>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>ch.qos.logback</groupId>
+                <artifactId>logback-classic</artifactId>
+                <version>${v.logback}</version>
+                <scope>compile</scope>
+            </dependency>
+
+        </dependencies>
+    </dependencyManagement>
 </project>
