Disabled sorcer_local_repo_location on windows (unused anyway) (cherry picked from commit 615a51e)

--- a/sos-providers/exertmonitor/exertmonitor-api/pom.xml
+++ b/sos-providers/exertmonitor/exertmonitor-api/pom.xml
@@ -27,6 +27,7 @@
     </parent>
 
     <artifactId>exertmonitor-api</artifactId>
+    <name>SORCER OS :: providers :: exertmonitor :: API</name>
 
     <dependencies>
         <dependency>
