Fixed problem with interrupted logging - added sos-platform to default-codebase to resolve class cast issues in jobber, fixes in remote logging

--- a/configs/shell/configs/nsh-init.config
+++ b/configs/shell/configs/nsh-init.config
@@ -33,6 +33,9 @@ sorcer.tools.shell.NetworkShell {
 	output = System.out;
 
 	debug = false;
+
+	// Show logs coming from remote providers that execute an exertion
+	remoteLogging = true;
 	
 	//loginContext =  new LoginContext("sorcer.tools.shell.config.ShellLoginContext");
 	
