--- a/sos/default-codebase/pom.xml
+++ b/sos/default-codebase/pom.xml
@@ -38,6 +38,11 @@
         </dependency>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>sos-platform</artifactId>
+            <version>${v.sorcer}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>cataloger-api</artifactId>
             <version>${v.sorcer}</version>
         </dependency>
