Introduce HttpExporterFactory; add AbstractExporterFactory.get(InvocationLayerFactory); update ex0-cfg configuration to use HTTP server exndpoint; update javadocs

--- a/examples/ex0/ex0-cfg/src/main/resources/service.config
+++ b/examples/ex0/ex0-cfg/src/main/resources/service.config
@@ -29,4 +29,6 @@ sorcer.core.provider.ServiceProvider {
 
 	monitorEnabled = false;
     spaceEnabled = false;
+
+    exporterFactory = sorcer.container.jeri.ExporterFactories.HTTP;
 }
