--- a/sos/sorcer-spi/pom.xml
+++ b/sos/sorcer-spi/pom.xml
@@ -29,6 +29,10 @@
         </dependency>
 
         <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-all</artifactId>
             <scope>test</scope>
