Deleted unnecessary module: commons-prv

--- a/examples/ex5/ex5-prv/pom.xml
+++ b/examples/ex5/ex5-prv/pom.xml
@@ -24,7 +24,7 @@
         </dependency>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
-            <artifactId>commons-prv</artifactId>
+            <artifactId>sos-platform</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
