--- a/examples/ex5/ex5-job/pom.xml
+++ b/examples/ex5/ex5-job/pom.xml
@@ -31,12 +31,12 @@
     <dependencies>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
-            <artifactId>commons-prv</artifactId>
+            <artifactId>ex5-api</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
-            <artifactId>ex5-api</artifactId>
+            <artifactId>sos-platform</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
