--- a/tests/ju-arithmetic/ju-arithmetic-prv/pom.xml
+++ b/tests/ju-arithmetic/ju-arithmetic-prv/pom.xml
@@ -14,7 +14,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.sorcersoft.sorcer</groupId>
-			<artifactId>commons-prv</artifactId>
+			<artifactId>sos-platform</artifactId>
             <version>${project.version}</version>
 		</dependency>
 		<dependency>
