--- a/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-prv/pom.xml
+++ b/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-prv/pom.xml
@@ -20,7 +20,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.sorcersoft.sorcer</groupId>
-			<artifactId>commons-prv</artifactId>
+			<artifactId>sos-platform</artifactId>
 			<version>${v.sorcer}</version>
 		</dependency>
 
