--- a/sos/sorcer-launcher/pom.xml
+++ b/sos/sorcer-launcher/pom.xml
@@ -1,31 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--
-  ~ Copyright 2014 Sorcersoft.com S.A.
-  ~
-  ~ Licensed under the Apache License, Version 2.0 (the "License");
-  ~ you may not use this file except in compliance with the License.
-  ~ You may obtain a copy of the License at
-  ~
-  ~      http://www.apache.org/licenses/LICENSE-2.0
-  ~
-  ~ Unless required by applicable law or agreed to in writing, software
-  ~ distributed under the License is distributed on an "AS IS" BASIS,
-  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  ~ See the License for the specific language governing permissions and
-  ~ limitations under the License.
-  -->
-
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
+        <artifactId>sos</artifactId>
         <groupId>org.sorcersoft.sorcer</groupId>
-        <artifactId>sos-launch</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <artifactId>sorcer-launcher-base</artifactId>
-    <name>SORCER Launch :: Base</name>
+
+    <artifactId>sorcer-launcher</artifactId>
+    <name>SORCER Launch :: Launcher</name>
+    <description>Helper classes for launching Sorcer server (provider) and client (requestor) processes; to be used by
+        other Sorcer tools. Do not confuse it with sos-boot which contains classes internal to the server process, i.e.
+        the main class for server (ServiceStarter) or with ServiceRequestor helper 'main' class for clients.
+    </description>
 
     <dependencies>
         <dependency>
@@ -46,7 +34,8 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>${v.slf4j}</version>
         </dependency>
+
     </dependencies>
+
 </project>
