--- a/pom.xml
+++ b/pom.xml
@@ -504,7 +504,27 @@
                 <artifactId>sonar-maven-plugin</artifactId>
                 <version>2.2</version>
             </plugin>
-		</plugins>
+            <plugin>
+                <groupId>org.jboss.tattletale</groupId>
+                <artifactId>tattletale-maven</artifactId>
+                <!-- The version of the plugin you want to use -->
+                <version>1.2.0.Beta2</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <!-- This is the location which will be scanned for generating tattletale reports
+                    -->
+                    <source>target</source>
+                    <!-- This is where the reports will be generated -->
+                    <destination>target/dest</destination>
+                </configuration>
+            </plugin>
+        </plugins>
 	</build>
 
 	<repositories>
