Fixing codebase in monitor, added remoteLogging to ex6 providers

--- a/examples/ex6/ex6-cfg-subtractor/src/main/resources/subtractor-prv.config
+++ b/examples/ex6/ex6-cfg-subtractor/src/main/resources/subtractor-prv.config
@@ -29,13 +29,11 @@ sorcer.core.provider.ServiceProvider {
 		
 		// persist and reuse service ID
 		providerIdPersistent = false;
-		
+
+		remoteLogging = true;
+
 		// service beans	
 		beanClasses = new Class[] { sorcer.arithmetic.provider.SubtractorImpl.class };
 		
 		iconName="examples.png";
 }
-	
-
-
-
