--- a/sos-providers/exertmonitor/pom.xml
+++ b/sos-providers/exertmonitor/pom.xml
@@ -12,6 +12,7 @@
 	<packaging>pom</packaging>
 	<modules>
 		<module>exertmonitor-cfg</module>
+        <module>exertmonitor-dl</module>
 		<module>exertmonitor-prv</module>
 	</modules>
 </project>
