--- a/examples/ex6/ex6-cfg-multiplier/src/main/resources/multiplier-prv.config
+++ b/examples/ex6/ex6-cfg-multiplier/src/main/resources/multiplier-prv.config
@@ -26,7 +26,9 @@ sorcer.core.provider.ServiceProvider {
 
 		spaceEnabled = true;
 		workerTransactional = true;
-		
+
+		remoteLogging = true;
+
 		// persist and reuse service ID
 		providerIdPersistent = false;
 		
@@ -35,7 +37,3 @@ sorcer.core.provider.ServiceProvider {
 		
 		iconName="examples.png";
 }
-	
-
-
-
