Fixes in archetype. Added Caller example (still work in progress)

--- a/examples/caller/caller-cfg/src/main/resources/caller.config
+++ b/examples/caller/caller-cfg/src/main/resources/caller.config
@@ -16,17 +16,17 @@ import sorcer.jini.jeri.*;
 
 sorcer.core.provider.ServiceProvider {
 	/* service provider generic properties */
-	name = "${rootArtifactId}";
-	description = "${serviceDescription}";
-	publishedInterfaces = new Class[] { ${package}.${providerInterface}.class };
+	name = "Caller";
+	description = "System Caller Service";
+	publishedInterfaces = new Class[] { sorcer.caller.Caller.class };
 	// service beans
-	beanClasses = new Class[] { ${package}.${providerClass}.class };
-	iconName="${serviceIcon}";
+	beanClasses = new Class[] { sorcer.caller.CallerImpl.class };
+	iconName="sorcersoft.png";
 
 	entries = new Entry[] {
-	    UIDescriptorFactory.getUIDescriptor(MainUI.ROLE, new UIComponentFactory(new URL("artifact:${groupId}:${rootArtifactId}-sui:${version}"), "${package}.${providerClass}UI"))
+	    UIDescriptorFactory.getUIDescriptor(MainUI.ROLE, new UIComponentFactory(new URL("artifact:org.sorcersoft.sorcer:caller-sui:1.0-SNAPSHOT"), "sorcer.caller.CallerImplUI"))
     };
 
-	monitorEnabled = ${usesMonitor};
-    spaceEnabled = ${usesSpacer};
+	monitorEnabled = false;
+    spaceEnabled = false;
 }
