--- a/examples/caller/caller-dl/pom.xml
+++ b/examples/caller/caller-dl/pom.xml
@@ -2,18 +2,18 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>${rootArtifactId}</artifactId>
-        <groupId>${groupId}</groupId>
-        <version>${version}</version>
+        <artifactId>caller</artifactId>
+        <groupId>org.sorcersoft.sorcer</groupId>
+        <version>1.0-SNAPSHOT</version>
     </parent>
 
-	<artifactId>${rootArtifactId}-dl</artifactId>
-	<name>SORCER :: ${rootArtifactId} :: DL</name>
+	<artifactId>caller-dl</artifactId>
+	<name>SORCER :: caller :: DL</name>
 
 	<dependencies>
         <dependency>
-            <groupId>${groupId}</groupId>
-            <artifactId>${rootArtifactId}-api</artifactId>
+            <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>caller-api</artifactId>
             <version>${project.version}</version>
         </dependency>
 		<dependency>
