Compatibility changes to run sorcer-modeling

--- a/sos-providers/exerter/exerter-cfg/src/main/resources/exerter.config
+++ b/sos-providers/exerter/exerter-cfg/src/main/resources/exerter.config
@@ -11,7 +11,7 @@ import net.jini.core.entry.Entry;
 import net.jini.lookup.entry.*;
 import sorcer.core.provider.*;
 import sorcer.util.ServiceExerter;
-import sorcer.service.Exerter;
+import sorcer.core.provider.Exerter;
 
 sorcer.core.provider.ServiceProvider {
         /* service provider deployment properties */
@@ -19,7 +19,7 @@ sorcer.core.provider.ServiceProvider {
 		description = "Exert Provider for SOS, the network version of ExertManager";
 		location = "Sorcersoft.com Lab";
 		publishedInterfaces = new Class[] { 
-			sorcer.service.Exerter.class };
+			sorcer.core.provider.Exerter.class };
 			
 		spaceEnabled = false;
 		
