--- a/configs/webster/configs/webster-prv.config
+++ b/configs/webster/configs/webster-prv.config
@@ -22,6 +22,7 @@ sorcer.tools.codeserver {
 
     // for compatibility with old sorcer distro
     roots = WebsterStarter.getWebsterRoots(new String[] {
+        home + "${/}data",
 		home + "${/}lib${/}sorcer",
 		home + "${/}lib${/}jini",
 		home + "${/}lib${/}rio",
