--- a/tools/sorcer-junit/pom.xml
+++ b/tools/sorcer-junit/pom.xml
@@ -54,6 +54,11 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
+            <groupId>junit-addons</groupId>
+            <artifactId>junit-addons</artifactId>
+            <version>1.4</version>
+        </dependency>
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>jul-to-slf4j</artifactId>
             <version>${v.slf4j}</version>
