Added net contexter test and Contexter service configuration

--- a/tests/ju-arithmetic/pom.xml
+++ b/tests/ju-arithmetic/pom.xml
@@ -16,6 +16,7 @@
 		<module>ju-arithmetic-api</module>
 		<module>ju-arithmetic-prv</module>
         <module>ju-arithmetic-cfg-all</module>
+        <module>ju-arithmetic-cfg-ctx</module>
 	</modules>
 
 	<build>
