--- a/tools/sorcer-pkg/pom.xml
+++ b/tools/sorcer-pkg/pom.xml
@@ -172,6 +172,22 @@
                         </sources>
                     </mapping>
                     <mapping>
+                        <directoryIncluded>true</directoryIncluded>
+                        <directory>/opt/netlets</directory>
+                        <filemode>755</filemode>
+                        <username>sorcer</username>
+                        <groupname>sorcer</groupname>
+                        <!--<needarch>true</needarch>-->
+                        <sources>
+                            <source>
+                                <location>../../distribution/target/sorcer-${project.version}/sorcer-${project.version}/netlets</location>
+                                <includes>
+                                    <include>**</include>
+                                </includes>
+                            </source>
+                        </sources>
+                    </mapping>
+                    <mapping>
                         <directory>/etc/profile.d/</directory>
                         <filemode>755</filemode>
                         <username>sorcer</username>
@@ -310,7 +326,20 @@
                                     <dirmode>777</dirmode>
                                 </mapper>
                             </data>
-
+                            <data>
+                                <type>directory</type>
+                                <src>../../distribution/target/sorcer-${project.version}/sorcer-${project.version}/netlets</src>
+                                <includes>**</includes>
+                                <mapper>
+                                    <type>perm</type>
+                                    <strip>0</strip>
+                                    <prefix>/opt/sorcer/netlets</prefix>
+                                    <user>sorcer</user>
+                                    <group>sorcer</group>
+                                    <filemode>755</filemode>
+                                    <dirmode>755</dirmode>
+                                </mapper>
+                            </data>
                             <data>
                                 <type>link</type>
                                 <linkName>/usr/bin/sorcer-boot</linkName>
